Начальная разметка, бонус

--- a/index.html
+++ b/index.html
@@ -31,9 +31,29 @@
       </nav>
 
       <div class="intro-slider">
-        <!-- здесь будет интро секция со слайдером -->
-        <b>Крем-брюле и пломбир с малиновым джемом</b>
-        <a href="" class="button">Давайте оба!</a>
+        <h2>Наше мороженое</h2>
+        <div class="slider-controls">
+          <label for="slide-1"></label>
+          <input type="radio" name="toggle" id="slide-1" checked>
+          <label for="slide-2"></label>
+          <input type="radio" name="toggle" id="slide-2">
+          <label for="slide-3"></label>
+          <input type="radio" name="toggle" id="slide-3">
+        </div>
+        <ul class="slider-list">
+          <li class="slider-item">
+            <h3>Крем-брюле и пломбир с малиновым джемом</h3>
+            <a class="button slider-button" href="#">Давайте оба!</a>
+          </li>
+          <li class="slider-item">
+            <h3>Шоколадный пломбир и лимонный сорбет</h3>
+            <a class="button slider-button" href="#">Давайте оба!</a>
+          </li>
+          <li class="slider-item">
+            <h3>Пломбир с помадкой и клубничный щербет</h3>
+            <a class="button slider-button" href="#">Давайте оба!</a>
+          </li>
+        </ul>
       </div>
     </header>
 
