добавила хеды для всех секций

--- a/catalog.html
+++ b/catalog.html
@@ -113,6 +113,7 @@
       </section>
 
       <section class="pagination-wrapper">
+        <h2>Страницы каталога</h2>
         <ul class="pagination">
           <li class="pagination-item">❮</li>
           <li class="pagination-item">1</li>
@@ -128,6 +129,7 @@
     <footer class="main-footer">
 
       <section class="footer-social">
+        <h2>Глейси в социальных сетях</h2>
         <ul class="social-list">
           <li class="social-item twitter"><a href="">Твитер</a></li>
           <li class="social-item instagram"><a href="">Инстаграм</a></li>
@@ -137,6 +139,7 @@
       </section>
 
       <section class="impressum">
+        <h2>Документы</h2>
         <div class="impressum-docs">
           <div class="docs-left-column">
             <a href="">Для поставщиков</a>
@@ -150,6 +153,7 @@
       </section>
 
       <section class="copyright">
+        <h2>Копирайт</h2>
         <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
           <img class="logo-academy" src="" width="108" height="40" alt="Лого HTML академии">
         </a>
