--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
           <p class="telephone" href="tel:+78124502525">8 812 450-25-25</p>
         </div>
       </nav>
+    </header>
 
-      <div class="intro-slider">
-        <h2>Наше мороженое</h2>
+    <main>
+      <section class="intro-slider">
+        <h1>Мороженое в ассортименте</h1>
         <div class="slider-controls">
           <label for="slide-1"></label>
           <input type="radio" name="toggle" id="slide-1" checked>
@@ -54,11 +56,10 @@
             <a class="button slider-button" href="#">Давайте оба!</a>
           </li>
         </ul>
-      </div>
-    </header>
+      </section>
 
-    <main>
       <section class="announces">
+        <h2>Анонсы ангеботов</h2>
         <article class="announce-raspberry">
           <h2>Малинка даром!</h2>
           <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
@@ -73,7 +74,7 @@
       </section>
 
       <section class="offers">
-        <h2>Наши хиты мороженок</h2>
+        <h2>Наши хиты</h2>
         <ul class="offer-hits">
           <li class="offer-item">
             <img src="" width="267" height="267" alt="Сливочное морожение">
@@ -99,6 +100,7 @@
       </section>
 
       <section class="features">
+        <h2>Кто мы</h2>
         <h3>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
         <ul class="features-list">
           <li class="features-item"><p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p></li>
@@ -110,18 +112,23 @@
 
       <div class="blog-newsletter">
         <article>
+          <h2>Новости</h2>
           <b>Новое в нашем блоге</b>
-          <h3></h3><a href="">10 способов сервировки фруктовых щербетов к столу</a></h3>
+          <h3><a href="">10 способов сервировки фруктовых щербетов к столу</a></h3>
         </article>
 
         <section class="newsletter">
+          <h2>Рассылка</h2>
           <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
           <form></form>
         </section>
       </div>
 
       <section class="map">
+        <h2>Глейси на карте</h2>
+        <!-- карта -->
         <section class="adress">
+          <h2>Адрес Глейси</h2>
           <p>Адрес главного офиса <br>и офлайн-магазина:
             <b>ул. Большая Конюшенная <br>19/8, Санкт-Петербург</b>
           </p>
@@ -137,6 +144,7 @@
     <footer class="main-footer">
 
       <section class="footer-social">
+        <h2>Глейси в социальных сетях</h2>
         <ul class="social-list">
           <li class="social-item twitter"><a href="">Твитер</a></li>
           <li class="social-item instagram"><a href="">Инстаграм</a></li>
@@ -146,6 +154,7 @@
       </section>
 
       <section class="impressum">
+        <h2>Документы</h2>
         <div class="impressum-docs">
           <div class="docs-left-column">
             <a href="">Для поставщиков</a>
@@ -159,6 +168,7 @@
       </section>
 
       <section class="copyright">
+        <h2>Копирайт</h2>
         <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
           <img class="logo-academy" src="" width="108" height="40" alt="Лого HTML академии">
         </a>
