Prepared all the graphics

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="main-header">
-      <a class="logo"><img src="#" width="154" height="64" alt="Логотип Глейси Шопа"></a>
+      <a class="logo"><img src="img/logo.svg" width="154" height="64" alt="Логотип Глейси Шопа"></a>
       <nav class="main-nav">
 
         <ul class="site-navigation">
@@ -33,7 +33,7 @@
 
     <main>
       <section class="intro-slider">
-        <h1>Мороженое в ассортименте</h1>
+        <h1 class="visually-hidden">Мороженое в ассортименте</h1>
         <div class="slider-controls">
           <label for="slide-1"></label>
           <input type="radio" name="toggle" id="slide-1" checked>
@@ -59,7 +59,7 @@
       </section>
 
       <section class="announces">
-        <h2>Анонсы ангеботов</h2>
+        <h2 class="visually-hidden">Анонсы ангеботов</h2>
         <article class="announce-raspberry">
           <h2>Малинка даром!</h2>
           <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
@@ -74,25 +74,25 @@
       </section>
 
       <section class="offers">
-        <h2>Наши хиты</h2>
+        <h2 class="visually-hidden">Наши хиты</h2>
         <ul class="offer-hits">
           <li class="offer-item">
-            <img src="" width="267" height="267" alt="Сливочное морожение">
+            <img src="img/ice01.jpg" width="267" height="267" alt="Сливочное морожение">
             <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
             <p>310<span>Р/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="" width="267" height="267" alt="Сливочно-кофейное морожение">
+            <img src="img/ice02.jpg" width="267" height="267" alt="Сливочно-кофейное морожение">
             <p>Сливочно-кофейное с кусочками шоколада</p>
             <p>380<span>Р/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="" width="267" height="267" alt="Сливочно-клубничное морожение">
+            <img src="img/ice03.jpg" width="267" height="267" alt="Сливочно-клубничное морожение">
             <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
             <p>355<span>Р/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="" width="267" height="267" alt="Сливочное крем-брюле">
+            <img src="img/ice04.jpg" width="267" height="267" alt="Сливочное крем-брюле">
             <p>Сливочное крем-брюле с карамельной подливкой</p>
             <p>455<span>Р/кг</span></p>
           </li>
@@ -100,7 +100,7 @@
       </section>
 
       <section class="features">
-        <h2>Кто мы</h2>
+        <h2 class="visually-hidden">Кто мы</h2>
         <h3>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
         <ul class="features-list">
           <li class="features-item"><p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p></li>
@@ -112,20 +112,20 @@
 
       <div class="blog-newsletter">
         <article>
-          <h2>Новости</h2>
+          <h2 class="visually-hidden">Новости</h2>
           <b>Новое в нашем блоге</b>
           <h3><a href="">10 способов сервировки фруктовых щербетов к столу</a></h3>
         </article>
 
         <section class="newsletter">
-          <h2>Рассылка</h2>
+          <h2 class="visually-hidden">Рассылка</h2>
           <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
           <form></form>
         </section>
       </div>
 
       <section class="map">
-        <h2>Глейси на карте</h2>
+        <h2 class="visually-hidden">Глейси на карте</h2>
         <!-- карта -->
         <section class="adress">
           <h2>Адрес Глейси</h2>
@@ -144,7 +144,7 @@
     <footer class="main-footer">
 
       <section class="footer-social">
-        <h2>Глейси в социальных сетях</h2>
+        <h2 class="visually-hidden">Глейси в социальных сетях</h2>
         <ul class="social-list">
           <li class="social-item twitter"><a href="">Твитер</a></li>
           <li class="social-item instagram"><a href="">Инстаграм</a></li>
@@ -154,7 +154,7 @@
       </section>
 
       <section class="impressum">
-        <h2>Документы</h2>
+        <h2 class="visually-hidden">Документы</h2>
         <div class="impressum-docs">
           <div class="docs-left-column">
             <a href="">Для поставщиков</a>
@@ -168,7 +168,7 @@
       </section>
 
       <section class="copyright">
-        <h2>Копирайт</h2>
+        <h2 class="visually-hidden">Копирайт</h2>
         <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
           <img class="logo-academy" src="" width="108" height="40" alt="Лого HTML академии">
         </a>
