--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 
   <body>
     <header class="main-header">
-      <a class="logo"><img src="#" width="154" height="64" alt="Логотип Глейси Шопа"></a>
+      <a class="logo"><img src="img/logo.svg" width="154" height="64" alt="Логотип Глейси Шопа"></a>
       <nav class="main-nav">
 
         <ul class="site-navigation">
@@ -100,67 +100,67 @@
       </section>
 
       <section class="offers-catalog">
-        <h2>Каталог мороженок</h2>
+        <h2 class="visually-hidden">Каталог мороженок</h2>
         <ul class="offers-list">
           <li class="offer-item">
-            <img src="" width="267" height="267" alt="Сливочное морожение">
+            <img src="img/ice01.jpg" width="267" height="267" alt="Сливочное морожение">
             <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
             <p>310<span>Р/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="" width="267" height="267" alt="Сливочно-кофейное морожение">
+            <img src="img/ice02.jpg" width="267" height="267" alt="Сливочно-кофейное морожение">
             <p>Сливочно-кофейное с кусочками шоколада</p>
             <p>380<span>Р/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="" width="267" height="267" alt="Сливочно-клубничное морожение">
+            <img src="img/ice03.jpg" width="267" height="267" alt="Сливочно-клубничное морожение">
             <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
             <p>355<span>Р/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="" width="267" height="267" alt="Сливочное крем-брюле">
+            <img src="img/ice04.jpg" width="267" height="267" alt="Сливочное крем-брюле">
             <p>Сливочное крем-брюле с карамельной подливкой</p>
             <p>455<span>Р/кг</span></p>
           </li>
 
           <li class="offer-item">
-            <img src="" width="267" height="267" alt="Сливочное морожение">
+            <img src="img/ice05.jpg" width="267" height="267" alt="Сливочное брусничное">
             <p>Сливочное с брусничным джемом</p>
             <p>325<span>Р/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="" width="267" height="267" alt="Сливочно-кофейное морожение">
+            <img src="img/ice06.jpg" width="267" height="267" alt="Сливочно-черничное морожение">
             <p>Сливочно-черничное с цельными ягодами черники</p>
             <p>410<span>Р/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="" width="267" height="267" alt="Сливочно-клубничное морожение">
+            <img src="img/ice07.jpg" width="267" height="267" alt="Сливочно-лимонное морожение">
             <p>Сливочно-лимонное с карамельной присыпкой</p>
             <p>375<span>Р/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="" width="267" height="267" alt="Сливочное крем-брюле">
+            <img src="img/ice08.jpg" width="267" height="267" alt="Сливочное с шоколадом">
             <p>Сливочное с шоколадной стружкой</p>
             <p>320<span>Р/кг</span></p>
           </li>
 
           <li class="offer-item">
-            <img src="" width="267" height="267" alt="Сливочное морожение">
+            <img src="img/ice09.jpg" width="267" height="267" alt="Сливочное-ванильное морожение">
             <p>Сливочно-ванильное с кусочками шоколада</p>
             <p>440<span>Р/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="" width="267" height="267" alt="Сливочно-кофейное морожение">
+            <img src="img/ice10.jpg" width="267" height="267" alt="Сливочно-ментоловое морожение">
             <p>Сливочно с ментоловым сиропом</p>
             <p>435<span>Р/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="" width="267" height="267" alt="Сливочно-клубничное морожение">
+            <img src="img/ice11.jpg" width="267" height="267" alt="Сливочное с шоколадом морожение">
             <p>Сливочное с кусочками черного шоколада</p>
             <p>355<span>Р/кг</span></p>
           </li>
           <li class="offer-item">
-            <img src="" width="267" height="267" alt="Сливочное крем-брюле">
+            <img src="img/ice12.jpg" width="267" height="267" alt="Сливочное-мятное">
             <p>Сливочное с мятным сиропом</p>
             <p>420<span>Р/кг</span></p>
           </li>
@@ -168,7 +168,7 @@
       </section>
 
       <section class="pagination-wrapper">
-        <h2>Страницы каталога</h2>
+        <h2 class="visually-hidden">Страницы каталога</h2>
         <ul class="pagination">
           <li class="pagination-item">❮</li>
           <li class="pagination-item">1</li>
@@ -184,7 +184,7 @@
     <footer class="main-footer">
 
       <section class="footer-social">
-        <h2>Глейси в социальных сетях</h2>
+        <h2 class="visually-hidden">Глейси в социальных сетях</h2>
         <ul class="social-list">
           <li class="social-item twitter"><a href="">Твитер</a></li>
           <li class="social-item instagram"><a href="">Инстаграм</a></li>
@@ -194,7 +194,7 @@
       </section>
 
       <section class="impressum">
-        <h2>Документы</h2>
+        <h2 class="visually-hidden">Документы</h2>
         <div class="impressum-docs">
           <div class="docs-left-column">
             <a href="">Для поставщиков</a>
@@ -208,9 +208,9 @@
       </section>
 
       <section class="copyright">
-        <h2>Копирайт</h2>
+        <h2 class="visually-hidden">Копирайт</h2>
         <a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
-          <img class="logo-academy" src="" width="108" height="40" alt="Лого HTML академии">
+          <img class="logo-academy" src="img/logo-htmlacademy.svg" width="108" height="40" alt="Лого HTML академии">
         </a>
         <p class="copyright-text">Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
       </section>
